--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -17,47 +17,48 @@ ZMK_COMBO(at,          &kp AT,         LT3 LM3,    BASE NAV NUM, COMBO_TERM_SLOW
 ZMK_COMBO(hash,        &kp HASH,       LT2 LM2,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(dllr,        &kp DLLR,       LT1 LM1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(prcnt,       &kp PRCNT,      LT0 LM0,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(plus,        &kp PLUS,       RT0 RM0,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(amps,        &kp AMPS,       RT1 RM1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(caret,       &kp CARET,      RT0 RM0,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(plus,        &kp PLUS,       RT1 RM1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(star,        &kp STAR,       RT2 RM2,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(caret,       &kp CARET,      RT3 RM3,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(amps,        &kp AMPS,       RT3 RM3,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
 /* Vertical Bottom,  */
-ZMK_COMBO(grave,       &kp GRAVE,      LM3 LB3,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW) 
+ZMK_COMBO(grave,       &kp GRAVE,      LM3 LB3,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(undo,        &kp LC(Z),      LM2 LB2,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(redo,        &kp LC(Y),      LM1 LB1,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(tilde,       &kp TILDE ,     LM0 LB0,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW) 
-ZMK_COMBO(minus,       &kp MINUS,      RM0 RB0,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW) 
-ZMK_COMBO(pipe,        &kp PIPE,       RM1 RB1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW) 
-ZMK_COMBO(lbrc,        &kp LBRC,       RM2 RB2,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW) 
-ZMK_COMBO(rbrc,        &kp RBRC,       RM3 RB3,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(lmb0,        &trans,         LM0 LB0,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(under,       &kp UNDER,      RM0 RB0,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(minus,       &kp MINUS,      RM1 RB1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(fslh,        &kp fslh,       RM2 RB2,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(pipe,        &kp PIPE,       RM3 RB3,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(tilde,       &kp TILDE,      RM4 RB4,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
 /* Horizontal  Top */ 
 ZMK_COMBO(lt32,        &trans,         LT3 LT2,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(mouse,       &smart_mouse,   LT2 LT1,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(find,        &kp LC(F),      LT1 LT0,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(enter,       &kp ENTER,      RT0 RT1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(rpar,        &kp RPAR,       RT1 RT2,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW) 
-ZMK_COMBO(rbkt,        &kp RBKT,       RT2 RT3,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW) 
+ZMK_COMBO(rt01,        &trans,         RT0 RT1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(bspc,        &kp BSPC,       RT1 RT2,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(del,         &kp DEL,        RT2 RT3,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
 /* Horizontal  Middle */ 
-ZMK_COMBO(ctrlL,       &kp LC(L),      LM3 LM2,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST) 
-ZMK_COMBO(copy,        &kp LC(INS),    LM2 LM1,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST) 
-ZMK_COMBO(ldr,         &leader,        LM1 LM0,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(sqt,         &kp SQT,        RM0 RM1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW) 
-ZMK_COMBO(lpar,        &kp LPAR,       RM1 RM2,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(lbkt,        &kp LBKT,       RM2 RM3,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)      
+ZMK_COMBO(ctrlL,       &kp LC(L),      LM3 LM2,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(copy,        &kp LC(INS),    LM2 LM1,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(flow,        &kp LA(SPACE),  LM1 LM0,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(equal,       &kp EQUAL,      RM0 RM1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(lpar,        lpar_lt,        RM1 RM2,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(rpar,        rpar_gt,        RM2 RM3,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
 /* Horizontal  Bottom */ 
-ZMK_COMBO(cut,         &kp LC(X),      LB3 LB2,     BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(paste,       &kp LS(INS),    LB2 LB1,     BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(lb10,        &trans,         LB1 LB0,     BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(lt,          &kp LT,         RB0 RB1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW) 
-ZMK_COMBO(equal,       &kp EQUAL,      RB1 RB2,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW) 
-ZMK_COMBO(gt,          &kp GT,         RB2 RB3,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW) 
+ZMK_COMBO(cut,         &kp LC(X),      LB3 LB2,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(paste,       &kp LS(INS),    LB2 LB1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(lb10,        &trans,         LB1 LB0,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(enter,       &kp ENTER,      RB0 RB1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(lbkt,        &kp LBKT,       RB1 RB2,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(rbkt,        &kp RBKT,       RB2 RB3,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
 /* Thumb combos */  
-ZMK_COMBO(flow,        &kp LA(SPACE),  LH2 LH1,     BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(tab,         &kp TAB,        LH1 LH0,     BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(monum,       &mo NUM,        RH0 RH1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(tenter,      &kp ENTER,      RH1 RH2,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(flow,        &kp LA(SPACE),  LH2 LH1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(ldr,         &leader,        LH1 LH0,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(esc,         &kp ESC,        RH0 RH1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(monum,       &mo NUM,        RH1 RH2,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
