--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -29,7 +29,7 @@ ZMK_COMBO(redo,        &kp LC(Y),      LM1 LB1,    BASE NAV NUM, COMBO_TERM_FAST
 ZMK_COMBO(lmb0,        &trans,         LM0 LB0,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(under,       &kp UNDER,      RM0 RB0,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(minus,       &kp MINUS,      RM1 RB1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(fslh,        &kp fslh,       RM2 RB2,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(fslh,        &kp FSLH,       RM2 RB2,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(pipe,        &kp PIPE,       RM3 RB3,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(tilde,       &kp TILDE,      RM4 RB4,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
