--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -44,7 +44,7 @@ ZMK_COMBO(del,         &kp DEL,        RT2 RT3,    BASE NAV NUM, COMBO_TERM_SLOW
 ZMK_COMBO(tab,         &kp TAB,        LM3 LM2,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(ldr,         &leader,        LM2 LM1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(flow,        &kp LA(SPACE),  LM1 LM0,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(equal,       &kp EQUAL,      RM0 RM1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(rm01,        &trans,         RM0 RM1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(lpar,        &lpar_lt,       RM1 RM2,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(rpar,        &rpar_gt,       RM2 RM3,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
