--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -25,7 +25,7 @@ ZMK_COMBO(amps,        &kp AMPS,       RT3 RM3,    BASE NAV NUM, COMBO_TERM_SLOW
 /* Vertical Bottom,  */
 ZMK_COMBO(grave,       &kp GRAVE,      LM3 LB3,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(bslh,        &kp BSLH,       LM2 LB2,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(equal,       &kp EQUAl,      LM1 LB1,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(equal,       &kp EQUAL,      LM1 LB1,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(tilde,       &kp TILDE,      LM0 LB0,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(under,       &kp UNDER,      RM0 RB0,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(minus,       &kp MINUS,      RM1 RB1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
