--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -1,225 +1,65 @@
-/ {
-    combos {
-        compatible = "zmk,combos";
+/*                                      38 KEY MATRIX / LAYOUT MAPPING
 
-        // Clipboard 
-        combo_copy {
-            timeout-ms = <18>;
-            bindings = <&kp LC(INS)>;
-            key-positions = <22 23>;
-            layers = <0 1>;
-            require-prior-idle-ms = <150>;
-        };
+    ╭────────────────────┬────────────────────╮        ╭──────────────────────┬─────────────────────╮
+    │  0   1   2   3   4 │  5   6   7   8   9 │        │  LT4 LT3 LT2 LT1 LT0 │ RT0 RT1 RT2 RT3 RT4 │
+ ╭──╯ 10  11  12  13  14 │ 15  16  17  18  19 ╰───╮ ╭──╯  LM4 LM3 LM2 LM1 LM0 │ RM0 RM1 RM2 RM3 RM4 ╰───╮
+ │ 20 21  22  23  24  25 │ 26  27  28  29  30  31 │ │ LB5 LB4 LB3 LB2 LB1 LB0 │ RB0 RB1 RB2 RB3 RB4 RB5 │
+ ╰──────────╮ 32  33  34 │ 35  36  37 ╭───────────╯ ╰──────────╮  LH2 LH1 LH0 │ RH0 RH1 RH2 ╭───────────╯
+            ╰────────────┴────────────╯                        ╰──────────────┴─────────────╯
+*/
 
-        combo_paste {
-            timeout-ms = <18>;
-            bindings = <&kp LS(INS)>;
-            key-positions = <23 24>;
-            layers = <0 1>; 
-            require-prior-idle-ms = <150>;
-        };
+#define COMBO_TERM_FAST 18
+#define COMBO_TERM_SLOW 30
 
-        combo_cut {
-            timeout-ms = <18>;
-            bindings = <&kp LC(X)>;
-            key-positions = <22 24>;
-            layers = <0 1>; 
-            require-prior-idle-ms = <150>;
-        };
-        
-        // Symbol 
+#define COMBO_IDLE_FAST 150
+#define COMBO_IDLE_SLOW 50
 
-            //Left Hand
-        combo_at {
-            timeout-ms = <30>;
-            bindings = <&kp AT>;
-            key-positions = <1 11 >;
-            layers = <0 1>; 
-            require-prior-idle-ms = <50>;
-        };
-        combo_hash {
-            timeout-ms = <30>;
-            bindings = <&kp HASH >;
-            key-positions = <2 12>;
-            layers = <0 1 >; 
-            require-prior-idle-ms = <50>;
-        };
-        combo_dollar {
-            timeout-ms = <30>;
-            bindings = <&kp DLLR >;
-            key-positions = <3 13>;
-            layers = <0 1 >; 
-            require-prior-idle-ms = <50>;
-        };
-        combo_percent {
-            timeout-ms = <30>;
-            bindings = <&kp PRCNT >;
-            key-positions = <4 14>;
-            layers = <0 1 >; 
-            require-prior-idle-ms = <50>;
-        }; 
+/* Vertical Top, Num Symbols */
+ZMK_COMBO(at,          &kp AT,         LT3 LM3,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(hash,        &kp HASH,       LT2 LM2,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(dllr,        &kp DLLR,       LT1 LM1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(prcnt,       &kp PRCNT,      LT0 LM0,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(caret,       &kp CARET,      RT0 RM0,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(plus,        &kp PLUS,       RT1 RM1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(star,        &kp STAR,       RT2 RM2,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(amps,        &kp AMPS,       RT3 RM3,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
+/* Vertical Bottom,  */
+ZMK_COMBO(grave,       &kp GRAVE,      LM3 LB3,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(bslh,        &kp BSLH,       LM2 LB2,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(equal,       &kp EQUAL,      LM1 LB1,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(tilde,       &kp TILDE,      LM0 LB0,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(under,       &kp UNDER,      RM0 RB0,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(minus,       &kp MINUS,      RM1 RB1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(fslh,        &kp FSLH,       RM2 RB2,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(pipe,        &kp PIPE,       RM3 RB3,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
-        combo_grave {
-            timeout-ms = <30>;
-            bindings = <&kp GRAVE >;
-            key-positions = <11 22>;
-            layers = <0 1 >; 
-            require-prior-idle-ms = <50>;
-        };
-        combo_bslh {
-            timeout-ms = <30>;
-            bindings = <&kp BSLH >;
-            key-positions = <12 23>;
-            layers = <0 1 >; 
-            require-prior-idle-ms = <50>;
-        };
-        combo_enter {
-            timeout-ms = <30>;
-            bindings = <&kp EQUAL>;
-            key-positions = <13 24>;
-            layers = <0 1 >; 
-            require-prior-idle-ms = <50>;
-        };
-        combo_tilde {
-            timeout-ms = <30>;
-            bindings = <&kp TILDE >;
-            key-positions = <14 25>;
-            layers = <0 1 >; 
-            require-prior-idle-ms = <50>;
-        };
-        
-            //Right Hand Vertical
-        combo_carret {
-            timeout-ms = <30>;
-            bindings = <&kp CARET >;
-            key-positions = <5 15>;
-            layers = <0 1 >; 
-            require-prior-idle-ms = <50>;
-        };
-        combo_plus {
-            timeout-ms = <30>;
-            bindings = <&kp PLUS >;
-            key-positions = <6 16>;
-            layers = <0 1 >; 
-            require-prior-idle-ms = <50>;
-        };
-        combo_asterisk {
-            timeout-ms = <30>;
-            bindings = <&kp STAR >;
-            key-positions = <7 17>;
-            layers = <0 1 >; 
-            require-prior-idle-ms = <50>;
-        };
-        combo_amp {
-            timeout-ms = <30>;
-            bindings = <&kp AMPS >;
-            key-positions = <8 18>;
-            layers = <0 1 >; 
-            require-prior-idle-ms = <50>;
-        };
+/* Horizontal  Top */ 
+ZMK_COMBO(lt32,        &trans,         LT3 LT2,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(mouse,       &smart_mouse,   LT2 LT1,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(find,        &kp LC(F),      LT1 LT0,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(rt01,        &trans,         RT0 RT1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(bspc,        &kp BSPC,       RT1 RT2,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(del,         &kp DEL,        RT2 RT3,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
+/* Horizontal  Middle */ 
+ZMK_COMBO(undo,        &kp LC(Z),      LM3 LM2,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(copy,        &kp LC(INS),    LM2 LM1,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(ldr,         &leader,        LM1 LM0,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(rm01,        &trans,         RM0 RM1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(lpar,        &lpar_lt,       RM1 RM2,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(rpar,        &rpar_gt,       RM2 RM3,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
-        combo_under {
-            timeout-ms = <30>;
-            bindings = <&kp UNDER >;
-            key-positions = <15 26>;
-            layers = <0 1 >; 
-            require-prior-idle-ms = <50>;
-        };
-        combo_minus {
-            timeout-ms = <30>;
-            bindings = <&kp MINUS >;
-            key-positions = <16 27>;
-            layers = <0 1 >; 
-            require-prior-idle-ms = <50>;
-        };
-        combo_fslh {
-            timeout-ms = <30>;
-            bindings = <&kp FSLH >;
-            key-positions = <17 28>;
-            layers = <0 1 >; 
-            require-prior-idle-ms = <50>;
-        };
-        combo_pipe {
-            timeout-ms = <30>;
-            bindings = <&kp PIPE >;
-            key-positions = <18 29>;
-            layers = <0 1 >; 
-            require-prior-idle-ms = <50>;
-        };
+/* Horizontal  Bottom */ 
+ZMK_COMBO(redo,        &kp LC(Y),      LB3 LB2,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(paste,       &kp LS(INS),    LB2 LB1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(lb10,        &trans,         LB1 LB0,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(enter,       &kp ENTER,      RB0 RB1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(lbkt,        &kp LBKT,       RB1 RB2,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(rbkt,        &kp RBKT,       RB2 RB3,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
-            //Right Hand Horizontal
-
-        combo_lbkt {
-            timeout-ms = <18>;
-            bindings = <&kp LBKT >;
-            key-positions = <27 28>;
-            layers = <0 1 >; 
-            require-prior-idle-ms = <150>;
-        };
-        combo_rbkt {
-            timeout-ms = <18>;
-            bindings = <&kp RBKT >;
-            key-positions = <28 29>;
-            layers = <0 1 >; 
-            require-prior-idle-ms = <150>;
-        };
-        combo_lpar {
-            timeout-ms = <18>;
-            bindings = <&kp LPAR >;
-            key-positions = <16 17>;
-            layers = <0 1 >; 
-            require-prior-idle-ms = <150>;
-        };
-        combo_rpar {
-            timeout-ms = <18>;
-            bindings = <&kp RPAR >;
-            key-positions = <17 18>;
-            layers = <0 1 >; 
-            require-prior-idle-ms = <150>;
-        };
-        // Smart Mouse
-        combo_mouse {
-            timeout-ms = <18>;
-            bindings = <&smart_mouse >;
-            key-positions = <2 3>;
-            layers = <0 1 >; 
-            require-prior-idle-ms = <150>;
-        };
-        // backspace
-        bspc {
-            timeout-ms = <18>;
-            bindings = <&kp BSPC>;
-            key-positions = <6 7>;
-            layers = <0 1 >; 
-            require-prior-idle-ms = <150>;
-        };
-        //delete
-        del {
-            timeout-ms = <18>;
-            bindings = <&kp DEL>;
-            key-positions = <7 8>;
-            layers = <0 1 >; 
-            require-prior-idle-ms = <150>;
-        };
-
-
-
-        // Letter Q & Z
-        z {
-            timeout-ms = <18>;
-            bindings = <&kp Z>;
-            key-positions = <0 1>;
-            layers = <0 1 >; 
-            require-prior-idle-ms = <150>;
-        };
-        q {
-            timeout-ms = <18>;
-            bindings = <&kp Q>;
-            key-positions = <1 3>;
-            layers = <0 1 >; 
-            require-prior-idle-ms = <150>;
-        };
-    };
-};
+/* Thumb combos */  
+ZMK_COMBO(flow,        &kp LA(SPACE),  LH2 LH1,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(tab,         &kp TAB,        LH1 LH0,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(tmux,        &kp LC(SPACE),  RH0 RH1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(monum,       &mo NUM,        RH1 RH2,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
