--- a/config/west.yml
+++ b/config/west.yml
@@ -7,11 +7,11 @@ manifest:
     - name: dhruvinsh
       url-base: https://github.com/dhruvinsh
     - name: JoMa388
-      url-base: https://github.com/JoMa388  
+      url-base: https://github.com/JoMa388
   projects:
     - name: zmk
-      remote: zmkfirmware
-      revision: main
+      remote: urob
+      revision: v0.2+fix-child-nodes
       import: app/west.yml
     - name: zmk-auto-layer
       remote: urob
@@ -25,5 +25,11 @@ manifest:
     - name: zmk-fork
       remote: JoMa388
       revision: main
+    - name: zmk-helpers
+      remote: urob
+      revision: main
+    - name: zmk-leader-key
+      remote: urob
+      revision: v0.2
   self:
     path: config
