--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -35,24 +35,24 @@ ZMK_COMBO(equal,       &kp EQUAL,      RM2 RB2,    BASE NAV NUM, COMBO_TERM_SLOW
 ZMK_COMBO(plus,        &kp PLUS,       RM3 RB3,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
 /* Horizontal  Top */ 
-ZMK_COMBO(lt32,        &trans,         LT3 LT2,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(mouse,       &smart_mouse,   LT2 LT1,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(lt10,        &trans,         LT1 LT0,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(cprev,       &kp C_PREV,     LT3 LT2,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(cpp,         &kp C_PP,       LT2 LT1,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(cnext,       &kp C_NEXT,     LT1 LT0,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(rt01,        &trans,         RT0 RT1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(rt12,        &trans,         RT1 RT2,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(rt23,        &trans,         RT2 RT3,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
 /* Horizontal  Middle */ 
-ZMK_COMBO(cprev,       &kp C_PREV,     LM3 LM2,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(cpp,         &kp C_PP,       LM2 LM1,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(cnext,       &kp C_NEXT,     LM1 LM0,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(tab,         &kp TAB,        LM3 LM2,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(enter,       &kp ENTER,      LM2 LM1,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(bspc,        &kp LC(BSPC),   LM1 LM0,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(lbkt,        &kp LBKT,       RM0 RM1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(lpar,        &lpar_lt,       RM1 RM2,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(rpar,        &rpar_gt,       RM2 RM3,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
 /* Horizontal  Bottom */ 
 ZMK_COMBO(lb32,        &trans,         LB3 LB2,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(lb21,        &trans,         LB2 LB1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(mclk,        &mkp MCLK,      LB2 LB1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(lb10,        &trans,         LB1 LB0,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(rb01,        &trans,         RB0 RB1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(rb12,        &trans,         RB1 RB2,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
@@ -60,6 +60,6 @@ ZMK_COMBO(rb23,        &trans,         RB2 RB3,    BASE NAV NUM, COMBO_TERM_SLOW
 
 /* Thumb combos */  
 ZMK_COMBO(flow,        &kp LA(SPACE),  LH2 LH1,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(tab,         &kp TAB,        LH1 LH0,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(ldr,         &leader,        LH1 LH0,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(tmux,        &kp LC(SPACE),  RH0 RH1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(monum,       &mo NUM,        RH1 RH2,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
