--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -52,7 +52,7 @@ ZMK_COMBO(rpar,        &rpar_gt,       RM2 RM3,    BASE NAV NUM, COMBO_TERM_SLOW
 
 /* Horizontal  Bottom */ 
 ZMK_COMBO(lb32,        &trans,         LB3 LB2,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(mclk,        &mkp MCLK,      LB2 LB1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(mclk,        &trans,         LB2 LB1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(lb10,        &trans,         LB1 LB0,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(rb01,        &trans,         RB0 RB1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(rb12,        &trans,         RB1 RB2,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
