--- a/config/includes/leader.dtsi
+++ b/config/includes/leader.dtsi
@@ -15,16 +15,16 @@
     };
 
 /* Function Keys */
-ZMK_LEADER_SEQUENCE(MEH1,       MEH1,        C)
-ZMK_LEADER_SEQUENCE(MEH2,       MEH2,        S)
-ZMK_LEADER_SEQUENCE(MEH3,       MEH3,        N)
-ZMK_LEADER_SEQUENCE(MEH4,       MEH4,        T)
-ZMK_LEADER_SEQUENCE(MEH5,       MEH5,        G)
-ZMK_LEADER_SEQUENCE(MEH6,       MEH6,        Q)
-ZMK_LEADER_SEQUENCE(MEH7,       MEH7,        X)
-ZMK_LEADER_SEQUENCE(MEH8,       MEH8,        M)
-ZMK_LEADER_SEQUENCE(MEH9,       MEH9,        D)
-ZMK_LEADER_SEQUENCE(MEH0,       MEH0,        V)
+ZMK_LEADER_SEQUENCE(MEH_1,       MEH1,        C)
+ZMK_LEADER_SEQUENCE(MEH_2,       MEH2,        S)
+ZMK_LEADER_SEQUENCE(MEH_3,       MEH3,        N)
+ZMK_LEADER_SEQUENCE(MEH_4,       MEH4,        T)
+ZMK_LEADER_SEQUENCE(MEH_5,       MEH5,        G)
+ZMK_LEADER_SEQUENCE(MEH_6,       MEH6,        Q)
+ZMK_LEADER_SEQUENCE(MEH_7,       MEH7,        X)
+ZMK_LEADER_SEQUENCE(MEH_8,       MEH8,        M)
+ZMK_LEADER_SEQUENCE(MEH_9,       MEH9,        D)
+ZMK_LEADER_SEQUENCE(MEH_0,       MEH0,        V)
 
 // BLE and USB
 #ifdef CONFIG_WIRELESS
