--- a/build.yaml
+++ b/build.yaml
@@ -4,4 +4,4 @@ include:
   - board: seeeduino_xiao_ble
     shield: totem_right
   - board: seeeduino_xiao_ble
-    shield: totem_dongle 
+    shield: totem_dongle prospector_adapter
