--- a/config/west.yml
+++ b/config/west.yml
@@ -12,8 +12,8 @@ manifest:
       url-base: https://github.com/carrefinho
   projects:
     - name: zmk
-      remote: urob
-      revision: v0.2+fix-child-nodes
+      remote: zmkfirmware 
+      revision: main 
       import: app/west.yml
     - name: zmk-auto-layer
       remote: urob
