--- a/config/west.yml
+++ b/config/west.yml
@@ -4,6 +4,12 @@ manifest:
       url-base: https://github.com/zmkfirmware
     - name: carrefinho
       url-base: https://github.com/carrefinho
+    - name: urob
+      url-base: https://github.com/urob
+    - name: dhruvinsh
+      url-base: https://github.com/dhruvinsh
+    - name: JoMa388
+      url-base: https://github.com/JoMa388
   projects:
     - name: zmk
       remote: zmkfirmware
@@ -12,5 +18,23 @@ manifest:
     - name: prospector-zmk-module
       remote: carrefinho
       revision: main
+    - name: zmk-auto-layer
+      remote: urob
+      revision: main
+    - name: zmk-tri-state
+      remote: dhruvinsh
+      revision: main
+    - name: zmk-adaptive-key
+      remote: urob
+      revision: main
+    - name: zmk-fork
+      remote: JoMa388
+      revision: main
+    - name: zmk-helpers
+      remote: urob
+      revision: main
+    - name: zmk-leader-key
+      remote: urob
+      revision: v0.2
   self:
     path: config
