totem_yads, remove leader keys

--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -60,6 +60,6 @@ ZMK_COMBO(rb23,        &trans,         RB2 RB3,    BASE NAV NUM, COMBO_TERM_SLOW
 
 /* Thumb combos */  
 ZMK_COMBO(flow,        &kp LA(SPACE),  LH2 LH1,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(ldr,         &leader,        LH1 LH0,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(func,        &mo FUNC,        LH1 LH0,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(tmux,        &kp LC(SPACE),  RH0 RH1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(monum,       &mo NUM,        RH1 RH2,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
