yasd: updated combos and num layer

--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -31,29 +31,29 @@ ZMK_COMBO(lbkt,        &kp LBKT,       LM1 LB1,    WIN MAC NAV	  , COMBO_TERM_FA
 ZMK_COMBO(mk5,         &mkp MB5,       LM3 LB3,    NUM			  , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(mk4,         &mkp MB4,       LM2 LB2,    NUM			  , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(mk3,         &mkp MB3,       LM1 LB1,    NUM  	      , COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(cpp,         &kp C_PP,       LM0 LB0,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(lmb0,        &trans,         LM0 LB0,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(pipe,        &kp PIPE,       RM0 RB0,    WIN MAC NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(lpar,		   &kp LPAR,       RM1 RB1,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(rpar,        &kp RPAR,       RM2 RB2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(fslh,        &kp FSLH,       RM3 RB3,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
 /* Horizontal  Top */ 
-ZMK_COMBO(cnext,       &kp C_NEXT,     LT3 LT2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(win_undo,    &kp LC(Z),      LT2 LT1,    WIN ,			COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(mac_undo,    &kp LG(Z),      LT2 LT1,    MAC ,		    COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(mac_redo,    &kp LC(Y),      LT1 LT0,    WIN ,			COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(mac_redo,    &kp LG(Y),      LT1 LT0,    MAC ,			COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(voldn,       &kp C_VOL_DN,   RT0 RT1,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(caret,       &kp CARET,      RT1 RT2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(cprev,       &kp C_PREV,     LT3 LT2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(cpp,         &kp C_PP,       LT2 LT1,    WIN MAC NAV NUM,	COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(cnext,       &kp C_NEXT,     LT1 LT0,    WIN MAC NAV NUM,	COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(rt12,        &trans,         RT1 RT2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(voldn,       &kp C_VOL_DN,   RT1 RT2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(volup,       &kp C_VOL_UP,   RT2 RT3,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
 /* Horizontal  Middle */ 
-ZMK_COMBO(tilde,       &kp TILDE,      LM3 LM2,    WIN MAC NAV ,    COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(grave,       &kp GRAVE,      LM2 LM1,    WIN MAC NAV ,    COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(win_redo,    &kp LC(Y),      LM3 LM2,    WIN ,			COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(mac_redo,    &kp LG(Y),      LM3 LM2,    MAC ,			COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(win_undo,    &kp LC(Z),      LM2 LM1,    WIN ,			COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(mac_undo,    &kp LG(Z),      LM2 LM1,    MAC ,		    COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(tab,         &kp TAB,        LM1 LM0,    WIN MAC NAV ,    COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(minus,       &kp MINUS,      RM0 RM1,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(qexcl,       &qexcl,         RM1 RM2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(rm23,        &trans,         RM2 RM3,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(caret,       &kp CARET,      RM2 RM3,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
 /* Horizontal  Bottom */
 ZMK_COMBO(win_cut,     &kp LC(X),      LB3 LB2,    WIN ,			COMBO_TERM_FAST, COMBO_IDLE_FAST)
@@ -68,9 +68,7 @@ ZMK_COMBO(rbrc,        &kp RBRC,       RB2 RB3,    WIN MAC NAV NUM, COMBO_TERM_S
 
 /* Thumb combos */  
 ZMK_COMBO(flow,        &kp LA(SPACE),  LH2 LH1,    WIN MAC NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(bspc,        &kp LA(BSPC),   LH1 LH0,    WIN MAC NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-// prop not optimal, can be replaced and have tmux leader key change
-ZMK_COMBO(tmux,        &kp LC(SPACE),  RH0 RH1,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-// Can be changed
-ZMK_COMBO(bspc2,       &kp LC(BSPC),   RH1 RH2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(grave,       &kp GRAVE,      LH1 LH0,    WIN MAC NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(tilde,       &kp TILDE,      RH0 RH1,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(rh12,        &trans,         RH1 RH2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
