added qwerty layer

--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -72,3 +72,5 @@ ZMK_COMBO(grave,       &kp GRAVE,      LH1 LH0,    WIN MAC NAV NUM, COMBO_TERM_F
 ZMK_COMBO(tilde,       &kp TILDE,      RH0 RH1,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(rh12,        &trans,         RH1 RH2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
+
+ZMK_COMBO(togsys,      &mo SYS,        LH2 LH1 LH0, GAME, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
