--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -14,27 +14,24 @@
 #define COMBO_IDLE_FAST 150
 #define COMBO_IDLE_SLOW 50
 
-/* Vertical Top, Symbols */ 
-ZMK_COMBO(at,          &kp AT,         LT3 LM3,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(hash,        &kp HASH,       LT2 LM2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(dllr,        &kp DLLR,       LT1 LM1,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(prcnt,       &kp PRCNT,      LT0 LM0,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(amps,        &kp AMPS,       RT0 RM0,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(plus,        &kp PLUS,       RT1 RM1,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(equal,       &kp EQUAL,      RT2 RM2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(star,        &kp STAR,       RT3 RM3,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+/* Vertical Left */ 
+ZMK_COMBO(sqt,         &kp SQT,        LT3 LM3,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(lt,          &kp LT,         LT2 LM2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(gt,          &kp GT,         LT1 LM1,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(dqt,         &kp DQT,        LT0 LM0,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(star,        &kp STAR,       LM3 LB3,    WIN MAC NAV	  , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(plus,        &kp PLUS,       LM2 LB2,    WIN MAC NAV	  , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(equal,       &kp EQUAL,	   LM1 LB1,    WIN MAC NAV	  , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(qexcl,	   &qexcl,	       LM0 LB0,    WIN MAC NAV	  , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
-/* Vertical Bottom,  */
-ZMK_COMBO(bslh,        &kp BSLH,       LM3 LB3,    WIN MAC NAV	  , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(win_cut,     &kp LC(X),      LM2 LB2,    WIN			  , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(mac_cut,     &kp LG(X),      LM2 LB2,    MAC			  , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(win_copy,	   &kp LC(INS),    LM1 LB1,    WIN            ,	COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(mac_copy,    &kp LG(C),      LM1 LB1,    MAC            ,	COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(win_paste,   &kp LS(INS),    LM0 LB0,    WIN			  , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(mac_paste,   &kp LG(V),      LM0 LB0,    MAC			  , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(qexcl,       &qexcl,         RM0 RB0,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(lbrc,		   &kp LBRC,       RM1 RB1,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(rbrc,        &kp RBRC,       RM2 RB2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+/* Vertical Right,  */
+ZMK_COMBO(pipe,        &kp PIPE,       RT0 RM0,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(lbrc,        &kp LBRC,       RT1 RM1,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(rbrc,        &kp RBRC,       RT2 RM2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(amps,        &kp AMPS,       RT3 RM3,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(bslh,        &kp BSLH,       RM0 RB0,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(lpar,	       &kp LPAR,       RM1 RB1,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(rpar,        &kp RPAR,       RM2 RB2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(fslh,        &kp FSLH,       RM3 RB3,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
 /* Num Layer */
@@ -43,39 +40,29 @@ ZMK_COMBO(mk5,         &mkp MB5,       LM3 LB3,    NUM			  , COMBO_TERM_SLOW, CO
 ZMK_COMBO(mk4,         &mkp MB4,       LM2 LB2,    NUM			  , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(mk3,         &mkp MB3,       LM1 LB1,    NUM  	      , COMBO_TERM_FAST, COMBO_IDLE_FAST)
 
-/* Horizontal  Top */ 
-ZMK_COMBO(lt32,        &none,          LT3 LT2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(lt21,        &none,          LT2 LT1,    WIN MAC NAV NUM,	COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(lt10,        &none,          LT1 LT0,    WIN MAC NAV NUM,	COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(rt01,        &trans,         RT0 RT1,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(voldn,       &kp C_VOL_DN,   RT1 RT2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(volup,       &kp C_VOL_UP,   RT2 RT3,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-
-/* Horizontal  Middle */ 
-ZMK_COMBO(lm32,        &none,          LM3 LM2,    WIN MAC NAV    ,	COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(cpp,         &kp C_PP,       LM2 LM1,    WIN MAC NAV NUM,	COMBO_TERM_FAST, COMBO_IDLE_FAST)
+/* Horizontal  Left    */ 
+ZMK_COMBO(at,          &kp AT,         LM3 LM2,    WIN MAC NAV    ,	COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(hash,        &kp HASH,       LM2 LM1,    WIN MAC NAV    ,	COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(tab,         &kp TAB,        LM1 LM0,    WIN MAC NAV    , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(lb32,        &none,          LB3 LB2,    MAC ,			COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(mac_copy,    &kp LG(C),      LB2 LB1,    MAC ,		    COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(win_copy,    &kp LC(INS),    LB2 LB1,    WIN ,		    COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(mac_paste,   &kp LG(V),      LB1 LB0,    MAC ,	        COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(win_paste,   &kp LS(INS),    LB1 LB0,    WIN ,	        COMBO_TERM_FAST, COMBO_IDLE_FAST)
+
+/* Horizontal  Right   */
 ZMK_COMBO(minus,       &kp MINUS,      RM0 RM1,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(lparlbkt,	   &lpar_lbkt,     RM1 RM2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(rparrbkt,    &rpar_rbkt,     RM2 RM3,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-
-/* Horizontal  Bottom */
-ZMK_COMBO(win_redo,    &kp LC(Y),      LB3 LB2,    WIN ,			COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(mac_redo,    &kp LG(Y),      LB3 LB2,    MAC ,			COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(win_undo,    &kp LC(Z),      LB2 LB1,    WIN ,			COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(mac_undo,    &kp LG(Z),      LB2 LB1,    MAC ,		    COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(lb10,        &none,          LB1 LB0,    WIN MAC NAV NUM,	COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(dllr,	       &kp DLLR,       RM1 RM2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(prcnt,       &kp PRCNT,      RM2 RM3,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(under,       &kp UNDER,      RB0 RB1,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(pipe,        &kp PIPE,       RB1 RB2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(caret,       &kp CARET,      RB2 RB3,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-
+ZMK_COMBO(lbrc,        &kp LBRC,       RB1 RB2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(rbrc,        &kp RBRC,       RB2 RB3,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
 /* Thumb combos */  
 ZMK_COMBO(flow,        &kp LA(SPACE),  LH2 LH1,    WIN MAC NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(grave,       &kp GRAVE,      LH1 LH0,    WIN MAC NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(tilde,       &kp TILDE,      RH0 RH1,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(rh12,        &trans,         RH1 RH2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-
 
 
 
